<resources>
    <string name="app_name">Todo App</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="mine">Mine</string>
    <string name="menu">Menu</string>
    <string name="input_new_task_here">Input new task here</string>
    <string name="no_category">No Category</string>
    <string name="no_date">No Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_3_days_later">3 Days Later</string>
    <string name="next_week">Next Week</string>
    <string name="time">Time</string>
    <string name="none">None</string>
    <string name="repeat">Repeat</string>
    <string name="done">DONE</string>
    <string name="cancel">Cancel</string>
    <string name="hello_s">Hello, %s</string>
    <string name="this_is_todo_app">This is Todo App!</string>
    <string name="theme">Theme</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="due_date_time"><![CDATA[Due Date & Time]]></string>
    <string name="alphabetical_a_z">Alphabetical A-Z</string>
    <string name="alphabetical_z_a">Alphabetical Z-A</string>
    <string name="add_sub_task">Add Sub-task</string>
    <string name="note">Note</string>
    <string name="edit">edit</string>
    <string name="add">add</string>
    <string name="attachment">Attachment</string>
    <string name="reminder_at">Reminder at</string>
    <string name="create_new">Create New</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="mark_as_not_completed">Mark as not completed</string>
    <string name="delete">Delete</string>
    <string name="enter_task_name">Enter task name…</string>
    <string name="creation_time">Creation time</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="tasks_in_next_7_days">Tasks in next 7 days</string>
</resources>