<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/alltask_overflow_manage_categories_menu"
        android:title="@string/manage_categories"/>
    <item android:id="@+id/alltask_overflow_search_menu"
        android:title="@string/search"/>
    <item android:id="@+id/alltask_overflow_sort_by_menu"
        android:title="@string/sort_by">
        <menu>
            <item android:id="@+id/alltask_overflow_sort_by_creation_time"
                android:title="@string/creation_time" />
            <item android:id="@+id/alltask_overflow_sort_by_date_time"
                android:title="@string/due_date_time" />
            <item android:id="@+id/alltask_overflow_sort_by_alpha_az"
                android:title="@string/alphabetical_a_z" />
            <item android:id="@+id/alltask_overflow_sort_by_alpha_za"
                android:title="@string/alphabetical_z_a" />
        </menu>
    </item>
</menu>